<resources>
    <string name="app_name">GekkoLog</string>
    <string name="title_home">Главная</string>
    <string name="title_pets">Питомцы</string>
    <string name="title_journal">Журнал</string>
    <string name="title_info">Справка</string>
    <string name="title_edit_pet">Редактирование питомца</string>
    <string name="image_gecko">Изображение вашего геккона</string>
    <string name="text_gecko_list">Список ваших питомцев</string>
    <string name="text_add_pet">Добавить питомца</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <!-- Редактирование геккона -->
    <string name="text_tap_to_change_photo">Нажмите для изменения фото</string>
    <string name="pet_name">Имя питомца</string>
    <string name="pet_age">Дата рождения</string>
    <string name="pet_morph">Морфа</string>
    <string name="pet_feed_period">Период кормления (дней)</string>
    <string name="pet_gender">Пол</string>
    <string name="male">Самец</string>
    <string name="female">Самка</string>
    <!-- Статистика питомца -->
    <string name="text_pet_last_ate">Кормление:</string>
    <string name="text_pet_last_shed">Линька:</string>
    <string name="text_pet_last_weight">Вес:</string>
    <string name="text_pet_no_stats_data">Нету данных</string>
    <!-- Пункты меню -->
    <string name="item_pet_reminder">Создать напоминание</string>
    <string name="item_pet_feed">Покормить</string>
    <string name="item_pet_shed">Прошла линька</string>
    <string name="item_pet_weight">Взвесить</string>
    <string name="item_pet_health">Событие о здоровье</string>
    <string name="item_pet_other">Другое событие</string>
    <!-- Редактирование событий -->
    <string name="text_event_edit">Редактирование события</string>
    <string name="text_event_pet">Питомец</string>
    <string name="text_event_date">Дата</string>
    <string name="text_event_feed_calcium">Кальций</string>
    <string name="text_event_feed_vitamin">Витамины</string>
    <string name="text_event_feed_deny">Отказался от приема пищи</string>
    <string name="text_event_feed_description">Описание према пищи</string>
    <string name="text_event_weight">Вес</string>
    <string name="text_event_shed_success">Справился самостоятельно</string>
    <string name="text_event_description">Описание</string>
    <!-- Редактирование напоминаний -->
    <string name="text_reminder_type">Тип</string>
    <string name="text_reminder_description">Текст для напоминания</string>
    <string name="text_reminder_done">Выполнено</string>
    <string name="title_event_edit">Запись в журнал</string>
    <string name="title_reminder_title">Напоминание</string>
    <!-- Главная -->
    <string name="text_reminder_edit">Редактировать</string>
    <string name="text_today_reminder">Уведомления 🔔</string>
    <string name="text_today_events">Записи 📝</string>
    <string name="text_empty_reminder">Тут пока ничего нет</string>
    <string name="text_empty_event">Тут пока ничего нет</string>
    <string name="add_event">Новая запись</string>
    <string name="add_reminder">Новое уведмоиление</string>
    <!-- Уведомления -->
    <string name="text_date_picker">Дата</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>