<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_pets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_gekko_colored"
        android:title="@string/title_pets" />

    <item
        android:id="@+id/navigation_journal"
        android:icon="@drawable/ic_journal_black"
        android:title="@string/title_journal" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_black"
        android:title="@string/title_info" />

</menu>