<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_pets"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="salabaev.gekkolog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_eventFragment"
            app:destination="@id/eventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pets"
        android:name="salabaev.gekkolog.ui.pets.PetsFragment"
        android:label="@string/title_pets"
        tools:layout="@layout/fragment_pets" >
        <action
            android:id="@+id/action_navigation_pets_to_petEditFragment"
            app:destination="@id/petEditFragment"
            app:popUpTo="@id/navigation_pets"
            app:popUpToInclusive="false"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_journal"
        android:name="salabaev.gekkolog.ui.journal.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" >
        <action
            android:id="@+id/action_navigation_journal_to_eventFragment"
            app:destination="@id/eventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_info"
        android:name="salabaev.gekkolog.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/petEditFragment"
        android:name="salabaev.gekkolog.ui.pets.edit.PetEditFragment"
        android:label="@string/title_edit_pet" >
        <action
            android:id="@+id/action_petEditFragment_to_eventFragment"
            app:destination="@id/eventFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventFragment"
        android:name="salabaev.gekkolog.ui.event.EventFragment"
        android:label="fragment_event"
        tools:layout="@layout/fragment_event" />
</navigation>