<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="80dp"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Уведомления -->
            <TextView
                android:id="@+id/text_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/text_today_reminder"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/gray_header"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notifications_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/text_notifications" />

            <TextView
                android:id="@+id/empty_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/text_empty_reminder"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/notifications_recycler" />

            <!-- Записи -->
            <TextView
                android:id="@+id/text_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_today_events"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/gray_header"
                app:layout_constraintTop_toBottomOf="@id/empty_notifications"
                tools:layout_editor_absoluteX="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/text_events" />

            <TextView
                android:id="@+id/empty_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_empty_event"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/text_events" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Кнопка добавления событий (большая) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_event"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_event"
        app:backgroundTint="@color/white"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="48dp"
        app:rippleColor="@color/gray_header"
        app:tint="@color/black" />

    <!-- Кнопка добавления уведомлений (меньшая) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/add_reminder"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_reminder"
        app:backgroundTint="@color/white"
        app:elevation="6dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp"
        app:rippleColor="@color/gray_header"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>